// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App in development mode 1`] = `
<t>
  <Provider
    key="provider"
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "reducers": Object {
          "helmet": [Function],
          "routing": [Function],
        },
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <div>
      <Connect(Component) />
      New Routes
    </div>
  </Provider>
</t>
`;

exports[`App in production mode 1`] = `
<Provider
  key="provider"
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "reducers": Object {
        "helmet": [Function],
        "routing": [Function],
      },
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <div>
    <Connect(Component) />
    New Routes
  </div>
</Provider>
`;
